[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/About_Developer.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Instagram.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Twitter.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Youtube.png" type="Texture" id=4]
[ext_resource path="res://Minecraft.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Sprites/Ghaith.zezo.png" type="Texture" id=6]
[ext_resource path="res://Sprites/—Pngtree—light effect photography light stage_7275697.png" type="Texture" id=7]
[ext_resource path="res://Sound/keyboard-typing-5997.mp3" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=2]
size = 63
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 6
extra_spacing_char = 6
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Label:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Ghaithzezo:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("kypord:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "ghathzezo"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("Label:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Ghaithzezo:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("kypord:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="DynamicFont" id=5]
size = 20
outline_size = 1
outline_color = Color( 0, 0.262745, 0.945098, 1 )
extra_spacing_char = 2
font_data = ExtResource( 5 )

[node name="About_Developer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = -3.0
margin_right = -2.0
margin_bottom = -3.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -4.0
margin_top = -4.0
margin_right = 514.0
margin_bottom = 303.0
color = Color( 0.0235294, 0.188235, 0.533333, 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 253, 148 )
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="Ghaithzezo" type="Sprite" parent="."]
position = Vector2( 253, 64 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )

[node name="Instagram" type="Sprite" parent="."]
position = Vector2( 431, 242 )
texture = ExtResource( 2 )

[node name="Twitter" type="Sprite" parent="."]
position = Vector2( 68, 242 )
texture = ExtResource( 3 )

[node name="Youtube" type="Sprite" parent="."]
position = Vector2( 248, 247 )
texture = ExtResource( 4 )

[node name="youtube" type="Button" parent="."]
margin_left = 188.0
margin_top = 202.0
margin_right = 308.0
margin_bottom = 292.0
flat = true

[node name="instagram" type="Button" parent="."]
margin_left = 374.0
margin_top = 187.0
margin_right = 489.0
margin_bottom = 297.0
flat = true

[node name="twitter" type="Button" parent="."]
margin_left = 8.0
margin_top = 191.0
margin_right = 126.0
margin_bottom = 297.0
flat = true

[node name="Label" type="Label" parent="."]
margin_left = 27.0
margin_top = 124.0
margin_right = 478.0
margin_bottom = 194.0
custom_colors/font_color = Color( 0, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0.345098, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "@Ghaithzezo"
percent_visible = 0.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "ghathzezo"
anims/RESET = SubResource( 3 )
anims/ghathzezo = SubResource( 4 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 255.5, 192 )
scale = Vector2( 0.268229, 0.385185 )
texture = ExtResource( 7 )

[node name="bACK" type="Button" parent="."]
margin_left = -2.0
margin_top = 2.0
margin_right = 67.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 5 )
text = "Back"
flat = true

[node name="kypord" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[connection signal="pressed" from="youtube" to="." method="_on_youtube_pressed"]
[connection signal="pressed" from="instagram" to="." method="_on_instagram_pressed"]
[connection signal="pressed" from="twitter" to="." method="_on_twitter_pressed"]
[connection signal="pressed" from="bACK" to="." method="_on_bACK_pressed"]
